# gravityp

./: .gitignore  Dockerfile  LICENSE  Makefile.am  Makefile.purify.in  NEWS  README.md  README_image_reconstruction.txt  README_mira_update.txt  README_yorick_update.txt  acinclude.m4  configure.ac  setup
.github/workflows/: docker-image.yml
acqcam/: Makefile  gvacqAberrationTracker.c  gvacqBicubicSpline.c  gvacqFieldTracker.c  gvacqPupilTracker.c  gvoProcessImageAC.c  gvoacqPreprocess.c  gvoacqWrite.c
acqcam/clipm/: ccs.h  ccsCCS.h  ccsErrors.h  ccsLite.h  ccsRtap.h  ccsSHMemory.h  ccsStates.h  clipm_centroiding.c  clipm_image_signal.c  clipm_math.c  clipm_priv_array.c  clipm_priv_array.h  clipm_priv_checks.c  clipm_priv_checks.h  clipm_priv_error.c  clipm_priv_error.h  clipm_priv_image.c  clipm_priv_image.h  clipm_priv_image_signal.c  clipm_priv_image_signal.h  clipm_priv_math.h  clipm_priv_matrix.c  clipm_priv_matrix.h  clipm_priv_optimize.c  clipm_priv_optimize.h  clipm_priv_vector.c  clipm_priv_vector.h  db.h  dbCCS.h  dbDefine.h  dbErrors.h  dbLite.h  evtLite.h  tims.h  timsCCS.h  timsErrors.h  vltPort.h
acqcam/include/: clipm.h  clipm_align.h  clipm_aperture.h  clipm_centroiding.h  clipm_compatibility_cpl.h  clipm_compatibility_replacements.h  clipm_image_display.h  clipm_image_signal.h  clipm_image_sim.h  clipm_math.h  clipm_math_correlation.h  clipm_math_regression.h  clipm_math_rng.h  clipm_version.h  evhStates.h  gvacqDefines.h  gvacqTypes.h  gvoProcessImageAC.h  vltPortGeneral.h
admin/: doxygen.am
doxygen/: Doxyfile.in
gravi/: Makefile.am  README  gravi-test.c  gravi-test.h  gravi_acqcam.c  gravi_acqcam.h  gravi_astrometry.c  gravi_astrometry.h  gravi_calib.c  gravi_calib.h  gravi_cpl.c  gravi_cpl.h  gravi_data.c  gravi_data.h  gravi_demodulate.c  gravi_demodulate.h  gravi_dfs.c  gravi_dfs.h  gravi_disp.c  gravi_disp.h  gravi_ellipse.c  gravi_ellipse.h  gravi_eop.c  gravi_eop.h  gravi_idp.c  gravi_idp.h  gravi_image.c  gravi_image.h  gravi_metrology.c  gravi_metrology.h  gravi_old.c  gravi_p2vm.c  gravi_p2vm.h  gravi_p2vmred.c  gravi_p2vmred.h  gravi_pca.c  gravi_pca.h  gravi_pfits.c  gravi_pfits.h  gravi_preproc.c  (+13 more)
gravi/tests/: GRAVI_DISP_MODEL.fits  GRAVI_STATIC_CALIB.fits  GRAVI_WAVE.fits  Makefile.am  gravi_badpix_map.fits  gravi_calib-test.c  gravi_dark_map.fits  gravi_data-test.c  gravi_dfs-test.c  gravi_eop-test.c  gravi_image-test.c  gravi_metrology-test.c  gravi_p2vm_map.fits  gravi_profile_map.fits  gravi_strehl-test.c  gravi_utils-test.c  gravi_vis-test.c  gravi_wave_map.fits  oi_vis_SC.fits  p2vm_map.fits  test_compute_dark.fits  vis_SC.fits  vis_data.fits  wavenumber_sc_table.fits
gravity_reg/: gravity_dark.yaml  gravity_p2vm.yaml
gravity_reg/sof/: 001.gravity_dark.sof  100.gravity_p2vm.sof  110.gravity_p2vm.sof  120.gravity_p2vm.sof  200.gravity_vis.sof  210.gravity_vis.sof
m4macros/: cext.m4  cpl.m4  erfa_pkg.m4  fftw.m4  gsl.m4  openmp.m4  purify.m4  qfits.m4  xxclipm.m4  yorick.m4
mira/: Makefile.am  fits.i  img.i  linop.i  mira-script.i  mira.i  oifits.i  options.i  plot.i  rgl.i  utils.i
recipes/: Makefile.am  gravity_astrometry.c  gravity_badpix.c  gravity_biasmask.c  gravity_dark.c  gravity_disp.c  gravity_eop.c  gravity_image.c  gravity_nab.c  gravity_p2vm.c  gravity_pca.c  gravity_pcacal.c  gravity_piezo.c  gravity_postprocess.c  gravity_vis.c  gravity_vis_from_p2vmred.c  gravity_viscal.c  gravity_wavelamp.c
reflex/: Makefile.am  gravity_mastercalib.oca  gravity_mastercalib.xml.in  gravity_plot_common.py  gravity_viscal.xml.in  gravity_viscal_interact.py  gravity_viscal_wkf.oca  gravity_wkf.oca  gravity_wkf.xml.in  parse_wkf_for_cvs
